# CrewAI-Agent

./: README.md  pyproject.toml
output/: report.md
src/collegeportal/: crew.py  main.py
