[project]
name = "collegeportal"
version = "0.1.0"
description = "collegePortal using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
collegeportal = "collegeportal.main:run"
run_crew = "collegeportal.main:run"
train = "collegeportal.main:train"
replay = "collegeportal.main:replay"
test = "collegeportal.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
